--- a/webdev_c1_knowcheck_01-main (1)/webdev_c1_knowcheck_01-main/index.html
+++ b/webdev_c1_knowcheck_01-main (1)/webdev_c1_knowcheck_01-main/index.html
@@ -3,6 +3,8 @@
 
   <head>
 
+    <meta name="viewport" content="width=device-width" />
+
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -56,7 +58,7 @@
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is [INSERT NAME] I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Andrea Thompson I'm a student at Code Kentucky. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
@@ -68,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/placeholder.jpg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -120,7 +122,7 @@
 
         <footer class="footer-content">
 
-            <p>&copy; 2022 Code Louisville. This website maintained by: [YOUR NAME HERE]</p> 
+            <p>&copy; 2022 Code Louisville. This website maintained by: Andrea Thompson</p> 
 
         </footer>
 
