--- a/TigerRosa Creations/index.html
+++ b/TigerRosa Creations/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <nav class="navbar">
-      <a href="#" class="nav-branding">TigerRosa</a>
+      <a href="#" class="nav-branding"></a>
       
   <ul class="nav-menu">
     <li class="nav-item"> 
@@ -37,48 +37,51 @@
     <article>
       <h2>Welcome to TigerRosa Creations</h2>
       <p class="sub-title">
-        You have stumbled onto my little cornor of the internet.  Here you will find
-        updates on all of my latest creations.  
-      </p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.      </p>
     </article>
   </main>
 
 <body>
-    <h1>Current Creations</h1>
+    <h1>FAQ</h1>
 
 <div class="accordion">
     <div class="accordion-item">
         <div class="accordion-item-header">
-            Home Decor
+            Custom Orders?
         </div>
         <div class="accordion-item-body">
             <div class="accordion-item-body-content">
-                Wreaths, knick knacks etc
+                We love them!
             </div>
         </div>
     </div>
 <div class="accordion">
     <div class="accordion-item">
         <div class="accordion-item-header">
-     Memorial Flowers
+     What is a TigerRosa?
             </div>
     <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                    Saddals, crosses, sprays
+                    TigerRosa is named for my two coworkers, Tiger cheif of security and Rosa schedule maker.  
                 </div>
             </div>
         </div>
+</div>
 <div class="accordion">
      <div class="accordion-item">
         <div class="accordion-item-header">
-             Gifts
+             Where is Krypton?
         </div>
      <div class="accordion-item-body">
      <div class="accordion-item-body-content">
-             Christmas, New Baby, Birthdays
+             In Southeastern Kentucky, near Hazard.
         </div>
              </div>
                 </div>
 </div>
+</div>
+
             </body>
+
+<footer> Created by Andrea Thompson 2022</footer>
             </html>
