--- a/TigerRosa Creations/index.html
+++ b/TigerRosa Creations/index.html
@@ -32,14 +32,28 @@
 </nav>
   </header>
   
-  <main>
+<main>
     <aside><img src="images/logo.png" alt="TigerRosa Creations" /></aside>
     <article>
       <h2>Welcome to TigerRosa Creations</h2>
       <p class="sub-title">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.      </p>
     </article>
-  </main>
+</main>
+
+<body>
+  <div class="header">
+      <h3>Latest Creations</h3>
+  </div>
+  <div id="gallery">
+      <img src="https://images.unsplash.com/photo-1602285415607-faa4007a0bca?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8V3JlYXRofGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"/>
+      <img src="https://images.unsplash.com/photo-1544018520-1dd648507d2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"/>
+      <img src="https://images.unsplash.com/photo-1557817017-2ce200058acd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHNld2luZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"/>
+      <img src="https://images.unsplash.com/photo-1532935909789-91408ff42c04?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Z3JhdmUlMjBmbG93ZXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"/>
+      <img src="https://images.unsplash.com/photo-1620107132931-f8700460c7ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aGFuZG1hZGUlMjBiYXNrZXRzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"/>
+      <img src="https://images.unsplash.com/photo-1506900039127-b1cb41deb557?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8cHVtcGtpbiUyMGZhYnJpY3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"/>
+  </div>
+</body>
 
 <body>
     <h1>FAQ</h1>
